make code compatible with Java 8